[package]
name = "advent-of-code-2023"
version = "0.1.69"
edition = "2021"

[[bin]]
name = "d01"
path = "src/d01/main.rs"

[[bin]]
name = "d02"
path = "src/d02/main.rs"

[[bin]]
name = "d03-part1"
path = "src/d03/part1.rs"

[[bin]]
name = "d03-part2"
path = "src/d03/part2.rs"

[[bin]]
name = "d04"
path = "src/d04/main.rs"

[[bin]]
name = "d05"
path = "src/d05/main.rs"

[[bin]]
name = "d06"
path = "src/d06/main.rs"

[[bin]]
name = "d07"
path = "src/d07/main.rs"

[[bin]]
name = "d08"
path = "src/d08/main.rs"

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
