[package]
name = "advent-of-code-2023"
version = "0.1.69"
edition = "2021"

[[bin]]
name = "d01"
path = "src/d01/main.rs"

[[bin]]
name = "d02"
path = "src/d02/main.rs"

[[bin]]
name = "d03-part1"
path = "src/d03/part1.rs"

[[bin]]
name = "d03-part2"
path = "src/d03/part2.rs"

[[bin]]
name = "d04"
path = "src/d04/main.rs"

[[bin]]
name = "d05"
path = "src/d05/main.rs"

[[bin]]
name = "d06"
path = "src/d06/main.rs"

[[bin]]
name = "d07"
path = "src/d07/main.rs"

[[bin]]
name = "d08"
path = "src/d08/main.rs"

[[bin]]
name = "d09"
path = "src/d09/main.rs"

[[bin]]
name = "d10"
path = "src/d10/main.rs"

[[bin]]
name = "d11"
path = "src/d11/main.rs"

[[bin]]
name = "d12"
path = "src/d12/main.rs"

[[bin]]
name = "d13"
path = "src/d13/main.rs"

[[bin]]
name = "d14"
path = "src/d14/main.rs"

[[bin]]
name = "d15"
path = "src/d15/main.rs"

[[bin]]
name = "d16"
path = "src/d16/main.rs"

[[bin]]
name = "d17"
path = "src/d17/main.rs"

[[bin]]
name = "d18"
path = "src/d18/main.rs"



[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
indoc = "2.0.4"
arrayvec = "0.7.4"
rayon = "1.8.0"
